tests/ui/async-await/issue-76547.stderr
error: lifetime may not live long enough
  --> $DIR/issue-76547.rs:19:38
   |
LL |   async fn fut(bufs: &mut [&mut [u8]]) {
   |  ____________________-_____-___________^
   | |                    |     |
   | |                    |     let's call the lifetime of this reference `'2`
   | |                    let's call the lifetime of this reference `'1`
LL | |
LL | |     ListFut(bufs).await
LL | | }
   | |_^ opaque type requires that `'1` must outlive `'2`
   |
help: consider introducing a named lifetime parameter
   |
LL | async fn fut<'a>(bufs: &'a mut [&'a mut [u8]]) {
   |             ++++        ++       ++

error: lifetime may not live long enough
  --> $DIR/issue-76547.rs:33:46
   |
LL |   async fn fut2(bufs: &mut [&mut [u8]]) -> i32 {
   |  _____________________-_____-__________________^
   | |                     |     |
   | |                     |     let's call the lifetime of this reference `'2`
   | |                     let's call the lifetime of this reference `'1`
LL | |
LL | |     ListFut2(bufs).await
LL | | }
   | |_^ opaque type requires that `'1` must outlive `'2`
   |
help: consider introducing a named lifetime parameter
   |
LL | async fn fut2<'a>(bufs: &'a mut [&'a mut [u8]]) -> i32 {
   |              ++++        ++       ++

error: aborting due to 2 previous errors

